Updated with Winter 2023 news

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -355,7 +355,7 @@ display: none;
 
 <center>
 <figure class="fourth">
-<img src="{{ site.url }}{{ site.baseurl }}/images/logo1.png" style="height: 100px">
+<img src="{{ site.url }}{{ site.baseurl }}/images/logo1.png" style="height: 150px">
 </figure>
 </center>
 <p><br></p>
@@ -368,7 +368,7 @@ improve health and well-being, and to promote environmental justice.</p>
 <p>For more details, see the <a href="research">Research</a> page.</p>
 <center>
 <figure class="fourth">
-<img src="{{ site.url }}{{ site.baseurl }}/images/slider7001400/isee2022.png" style="width: 350px">
+<img src="{{ site.url }}{{ site.baseurl }}/images/slider7001400/BanqUpl.jpg" style="width: 350px">
 </figure>
 </center>
 <p>We are based in the <a href="https://www.dal.ca/faculty/science/earth-environmental-sciences.html">Department
